# TTRPGWikiService

./: .gitignore  Architecture-Notes.md  README.md
Design/: Architecture-Notes.md  Requirements.md
backend/: pyproject.toml
backend/config/: settings.py
backend/universes/: apps.py
